--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,26 +1,24 @@
 body {
   font-family: sans-serif;
-  font-weight: 200;
-}
+  font-weight: 200; }
 
 .navbar {
-  margin-bottom: 50px;
-}
+  margin-bottom: 50px; }
 
 .character {
   margin: 10px 0;
   border: 1px solid;
-  padding: 20px;
-}
+  padding: 20px; }
 
 .character p {
-  margin-bottom: 5px;
-}
+  margin-bottom: 5px; }
+
+.character h2 {
+  font-size: 1.5em; }
 
 form label,
 form input {
   width: 100%;
-  margin-bottom: 10px;
-}
+  margin-bottom: 10px; }
 
 /*# sourceMappingURL=style.css.map */
