--- a/views/pages/edit-character-form.hbs
+++ b/views/pages/edit-character-form.hbs
@@ -1,31 +1,36 @@
-<div class="container">
+<div class='container'>
+  <div class='container'>
+    <div class='row justify-content-center'>
+      <div class='col-md-6'>
+        <h1>
+          Edit {{character.name}}
+        </h1>
 
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
+        <hr />
 
-                <h1>Edit {{character.name}}</h1>
+        <form action='/characters/edit/{{character.id}}' method='post'>
+          <label>
+            Name:
+            <input type='text' name='name' value="{{character.name}}" />
+          </label>
 
-                <hr>
+          <label>
+            Occupation:
+            <input
+              type='text'
+              name='occupation'
+              value="{{character.occupation}}"
+            />
+          </label>
 
-                <form action="<!-- pending -->" method="post">
-                    <label>
-                        Name: <input type="text" name="name" value="<!-- pending -->">
-                    </label>
+          <label>
+            Weapon:
+            <input type='text' name='weapon' value="{{character.weapon}}" />
+          </label>
 
-                    <label>
-                        Occupation: <input type="text" name="occupation" value="<!-- pending -->">
-                    </label>
-
-                    <label>
-                        Weapon: <input type="text" name="weapon" value="<!-- pending -->">
-                    </label>
-
-                    <input type="submit" value="Update character" class="btn-dark btn">
-                </form>
-
-            </div>
-        </div>
+          <input type='submit' value='Update character' class='btn-dark btn' />
+        </form>
+      </div>
     </div>
-
+  </div>
 </div>
